fix: title spacing

--- a/src/style.css
+++ b/src/style.css
@@ -191,7 +191,7 @@ ul {
   color: #303030;
   display: flex;
   align-items: flex-end;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 
 .person-wrapper {
@@ -210,13 +210,14 @@ ul {
 .person-main {
   position: relative;
   z-index: 10;
-  flex: 1;
+  /* row flex: control distance between main and second */
+  /* flex: 1; */
 }
 
 .person-second {
   position: relative;
   z-index: 10;
-  flex: 1;
+  /* flex: 1; */
   text-align: right;
 }
 
@@ -234,8 +235,8 @@ ul {
 }
 
 .person-second-subheading {
-  text-transform: uppercase;
-  font-weight: 500;
+  /* text-transform: uppercase; */
+  font-weight: 400;
 }
 
 .typing-effect {
@@ -279,7 +280,6 @@ ul {
   .person {
     align-items: flex-start;
     padding-top: 150px;
-    padding-bottom: 0;
   }
 
   .person-wrapper {
@@ -288,7 +288,7 @@ ul {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 15px;
+    gap: 30px;
     text-align: center;
   }
 
